--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
-  align-items: center;
+  /* align-items: center; */
   /* min-height: 100vh; */
 }
 
@@ -21,5 +21,17 @@
   height: 30px;
   text-align: center;
   margin: 0.5rem;
+}
+
+.correctPositionBox {
+ background-color: darkgreen;
+}
+
+.incorrectPositionBox {
+  background-color: darkorange;
+}
+
+.incorrectBox {
+  background-color: lightgrey;
 }
 
